@@ -4,7 +4,7 @@ plugins {
 }
 
 base {
-	archivesName = 'nether-wart-farm-helper'
+	archivesName = 'aqua-vision-is-op'
 }
 
 def modVersion = project.version.toString()
@@ -45,6 +45,7 @@ tasks.withType(JavaCompile).configureEach {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
 
 java {
